Fix wrapping of test names
Data grid tables don't support dynamic row heights, which is why I used
the ellipsis and tooltip, but I realize I don't need dynamic row heights
- they can all be the same size, just taller.

This also fixes the test-by-variant table which isn't data grid and can
have dynamic heights.

I also removed the decimal points.

--- a/sippy-ng/src/tests/TestByVariantTable.css
+++ b/sippy-ng/src/tests/TestByVariantTable.css
@@ -28,10 +28,10 @@
 }
 
 .cell-name {
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
-    word-break: break-all;
+    display: block;
+    line-height: normal;
+    white-space: break-spaces;
+    word-wrap: break-word;
 }
 
 .col-result {
@@ -41,6 +41,9 @@
     width: 100px;
     min-width: 100px;
     max-width: 100px;
+    word-wrap: break-word;
+    white-space: break-spaces;
+    display: block;
 }
 
 .col-result-full {
